cambios: agregando textos imagenes, carrousel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Maqueta</title>
     <link rel="stylesheet" href="style.css">
@@ -15,50 +15,67 @@
     <header>
         <section>
 
-        <h1>Musiquiatra</h1>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Inicio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Comunidad</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Clientes</a>
-                  </li>
-                </ul>
-              </div>
-          </nav>        
+            <h1>Musiquiatra</h1>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Inicio</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Comunidad</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Clientes</a>
+                            </li>
+                        </ul>
+                    </div>
+            </nav>
         </section>
         <section>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
+                <div class="carousel-inner "></div>
+                <div class="carousel-item active">
+                    <img src="/fotos/footer4.jpg" class="d-block w-33" alt="first">
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+                <div class="carousel-item">
+                    <img src="/fotos/footer2.jpg" class="d-block w-33" alt="second">
+                </div>
+                <div class="carousel-item">
+                    <img src="fotos/footer3.jpg" class="d-block w-33" alt="thrid">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
+        </section>
+<section>
+    <p class="text-white bg-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quia quos pariatur repellendus quam excepturi ipsum nam non commodi, eius mollitia dicta facilis autem doloremque tenetur ratione vel voluptate enim! Cupiditate quam impedit voluptate rem! Error eveniet voluptate magnam temporibus suscipit adipisci, distinctio quos magni, dolore ipsa sed vel. Similique suscipit sequi nulla libero. Veniam tenetur odio, quo molestias voluptas error alias explicabo ab, sed ullam molestiae deleniti magni pariatur at ex, placeat quisquam nam. Aliquid dolor facere at exercitationem id, itaque laudantium, voluptas veritatis corrupti praesentium enim eos totam, voluptatibus architecto perspiciatis voluptates tempore nesciunt deleniti dolores est fugiat!</p>
+</section>
+        <section>
+            <div class="d-flex p-5">
+                <img src="fotos/footer9.avif" class="img-circle" alt="circleone">
+            </div>
+            <div class="d-flex p-5">
+                <img src="fotos/footer10.jpg" class="img-circle" alt="circletwo">
+            </div>
+            <div class="d-flex p-5">
+                <img src="fotos/footer8.jpeg" class="img-circle" alt="circlethree">
+            </div>
         </section>
 
     </header>
