nueva pagina agregada

--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Maqueta</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -15,10 +15,10 @@
     <header>
         <section>
 
-            <h1>Musiquiatra</h1>
+            <h1>Inicio</h1>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Inicio</a>
+                    <a class="navbar-brand" href="#">Musiquiatra</a> <a href="/index.html"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -42,13 +42,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner "></div>
                 <div class="carousel-item active">
-                    <img src="/fotos/footer4.jpg" class="d-block w-33" alt="first">
+                    <img src="/fotos/footer6.jpg" class="d-block w-33" alt="first">
                 </div>
                 <div class="carousel-item">
-                    <img src="/fotos/footer2.jpg" class="d-block w-33" alt="second">
+                    <img src="/fotos/footer11.jpg" class="d-block w-33" alt="second">
                 </div>
                 <div class="carousel-item">
-                    <img src="fotos/footer3.jpg" class="d-block w-33" alt="thrid">
+                    <img src="fotos/footer13.jpg" class="d-block w-33" alt="thrid">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -68,13 +68,13 @@
 </section>
         <section .d-flex >
             <div class="d-flex p-5" >
-                <img src="fotos/footer9.avif" class="img-circle" alt="circleone">
+                <img src="fotos/footer2.jpg" class="img-circle" alt="circleone">
             </div>
             <div class="d-flex p-5">
-                <img src="fotos/footer10.jpg" class="img-circle" alt="circletwo">
+                <img src="fotos/footer3.jpg" class="img-circle" alt="circletwo">
             </div>
             <div class="d-flex p-5">
-                <img src="fotos/footer8.jpeg" class="img-circle" alt="circlethree">
+                <img src="fotos/footer4.jpg" class="img-circle" alt="circlethree">
             </div>
         </section>
 
@@ -85,9 +85,9 @@
               <li class="page-item disabled">
                 <a class="page-link">Previous</a>
               </li>
-              <li class="page-item"><a class="Inicio" href="/inicio.html">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="index" href="/index.html">1</a></li>
+              <li class="page-item"><a class="" href="#">2</a></li>
+              <li class="page-item"><a class="" href="#">3</a></li>
               <li class="page-item">
                 <a class="page-link" href="#">Next</a>
               </li>
